fixedResourcesVerticalAlignmentAndDeletedCssUnusefulStyles

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -32,12 +32,6 @@
     padding-inline-end: 0 !important;
 }
 
-.fi-ta-record:is(.expense-change-request-record, .debt-record, .expense-record)>div:first-child .fi-ta-col-wrp {
-    height: 100%;
-    display: flex;
-    align-items: center;
-}
-
 .fi-ta-group-header {
     width: auto !important;
 }
